[metadata]
name = heat-contrib-monasca
version = 0.1
summary = Heat resources for Monasca
description-file =
    README.md
author = OpenStack
author-email = kanagaraj.manickam@hp.com
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    heat_monasca

# Copy to /usr/lib/heat for plugin loading
data_files =
    lib/heat/monasca = heat_monasca/resources/*

[entry_points]
heat.clients =
    monasca = heat_monasca.client:MonascaClientPlugin

heat.constraints =
    monasca.notification = heat_monasca.client:MonascaNotificationConstraint

[global]
setup-hooks =
    pbr.hooks.setup_hook
